--- a/Axios/index.html
+++ b/Axios/index.html
@@ -6,6 +6,10 @@
     <title>Axios</title>
 </head>
 <body>
+    <h1>Click to get new jokes</h1>
+    <button>Click me!</button>
+    <ul id="jokes"></ul>
+
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <script src="app.js"></script>
 </body>
