--- a/OOP_Code/index.html
+++ b/OOP_Code/index.html
@@ -3,13 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Properties</title>
-    <style>
-        body {
-            background-color: red;
-            color: white;
-        }
-    </style>
 </head>
 <body>
     <h1>Hello, we're learning about PROTO and Prototypes</h1>
